# tntnet-architectures

./: .gitignore  README.md
micro/: configure  configure.ac
micro/autom4te.cache/: output.1  requests  traces.1
micro/src/: public.cpp  webmain.cpp
micro/src/api/controllers/: index.cpp  index.ecpp
micro/src/api/jsons/: example.cpp
mvc/: Makefile.am
mvc/src/: public.cpp
tntnet3/micro/: Makefile.am  README.md
tntnet3/micro/src/: MyApi.xml  actionmain.cpp  actionmain.ecpp  main.cpp  webmain.ecpp
tntnet3/micro/src/api/actions/: myaction.cpp
tntnet3/mvc/autom4te.cache/: requests
